--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -1,11 +1,10 @@
 .toolbar-wrapper {
   margin: 2rem auto;
   padding: 0.4rem;
-  width: 30rem;
+  width: 33rem;
   display: flex;
   justify-content: center;
   background-color: #fafafa;
-  border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
@@ -31,4 +30,137 @@
   height: 2rem;
   stroke: var(--CorPrincipal);
   fill: var(--CorPrincipal);
+}
+
+/* Modals */
+.page-overlay {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.4);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.tool-modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-height: 20rem;
+  z-index: 10;
+}
+
+.tool-modal-header {
+  background-color: var(--CorPrincipal);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  color: #fff;
+  padding: 0.1rem 1rem 0.1rem 1rem;
+  font-size: 1.3rem;
+}
+
+.tool-modal-body {
+  background-color: #fafafa;
+
+  padding: 0.5rem 1rem 0.5rem 1rem;
+  min-width: 30rem;
+  max-height: 70vh;
+  overflow: auto;
+}
+
+.tool-modal-body ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.tool-modal-body li {
+  margin: 1rem 0 1rem;
+}
+
+.tool-modal-body input,
+.tool-modal-body textarea {
+  display: block;
+  padding: 0.2rem;
+}
+
+.tool-modal-body input[type='text'] {
+  width: 15rem;
+}
+
+.tool-modal-body option {
+  padding: 0.2rem;
+}
+
+/* Tool Buttons */
+
+.tool-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 1rem;
+  text-align: right;
+  background-color: #fafafa;
+  border-radius: 0 0 15px 15px;
+}
+.tool-buttons button {
+  padding: 0.7rem;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  margin: 0 0.3rem 0 0.3rem;
+  cursor: pointer;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    'Helvetica Neue', sans-serif;
+  transition: all 0.3s;
+  background-color: #fafafa;
+  color: rgba(0, 0, 0, 0.54);
+}
+.tool-cancel-button:hover {
+  background-color: rgba(0, 0, 0, 0.06);
+}
+.tool-submit-button-active {
+  background-color: #1f76e8 !important;
+  color: #fff !important;
+  font-weight: 500;
+}
+.tool-submit-button-disable {
+  pointer-events: none;
+}
+
+.tool-feedback-success {
+  background-color: #86e8a7;
+  border: 1px solid #4adc71;
+  color: #4c8c5d;
+  font-size: 0.9rem;
+  padding: 0.7rem 1rem 0.7rem 1rem;
+  border-radius: 10px;
+}
+.tool-feedback-error {
+  background-color: #c89797;
+  border: 1px solid #e08781;
+  color: #844b47;
+  font-size: 0.9rem;
+  padding: 0.7rem 1rem 0.7rem 1rem;
+  border-radius: 10px;
+}
+
+/* Delete */
+
+.confirmation-body {
+  margin: 1rem 0 3rem 0;
+}
+.confirmation-body label {
+  font-size: 1.2rem;
+  font-weight: 300;
+  padding: 0.5rem 0 0.5rem 0;
+  display: block;
+}
+.confirmation-body input {
+  font-size: 1.3rem;
+  padding: 0.4rem;
+  border: 1px solid rgba(0, 0, 0, 0.32);
+  border-radius: 5px;
+  width: 16rem;
 }
